[package]
name = "hismserver"
version = "0.1.0"
authors = ["shane <moloney.shane@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"

env_logger = "0.7.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features =["sqlite", "r2d2"] }
dotenv = "0.14.1"
